PyMaker/datas/object2/RawHTML/i16401/Python_DOC_referPages.eclipse-pydev-my-build-is-clean-yet-i-get-syntax-error-at-runtime.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/2535760/python-try-except-comma-vs-as-in-except">Python try…except comma vs 'as' in except</a>
<span class="question-originals-answer-count">
                    4 answers
                </span>
</li>
</ul>
</div>
<p>Looks good here:</p>
<pre><code>except socket.error, err:
     raise urllib2.URLError(err)
</code></pre>
<p>But gives this error at runtime:</p>
<pre><code>    except Exception, e:
                    ^
SyntaxError: invalid syntax
</code></pre>
<p>Using Python 3.3 and Eclipse 5.0   </p>
<p>Any suggestions for me?  Do I need to reinstall the Interpreter?  </p>
</div>
<div class="post-text" itemprop="text">
<p>You are using the Python 2 <code>except</code> syntax. Instead, try</p>
<pre><code>except socket.err as err:
    raise urllib2.URLError(err)
</code></pre>
<p>See <a href="https://docs.python.org/3/tutorial/errors.html" rel="nofollow">here</a> for more info about exceptions, errors, and how to handle them. You can also use the Python 3 syntax in Python 2.6 and 2.7, as it was back-ported.</p>
</div>
